# SDF

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_release.sh  config.cmake.example
SN2CustomCraft/: CMakeLists.txt
SN2CustomCraft/examples/: categories.toml  databank.toml  items.toml  recipes.toml
SN2CustomCraft/include/: README.md
SN2CustomCraft/include/SDF/: Version.hpp
SN2CustomCraft/include/private/: Mod.hpp
SN2CustomCraft/include/private/parsing/: CategoryParser.hpp  RecipeParser.hpp
SN2CustomCraft/include/private/registering/: CategoryFactory.hpp  ItemTypeFactory.hpp
SN2CustomCraft/include/private/util/: Log.hpp  RegistryHelper.hpp
SN2CustomCraft/include/public/SDF/: Version.hpp
SN2CustomCraft/src/: Mod.cpp  Mod.hpp
SN2CustomCraft/src/parsing/: CategoryParser.cpp  CategoryParser.hpp  DatabankEntryParser.cpp  DatabankEntryParser.hpp  FileTraversal.cpp  FileTraversal.hpp  IconParser.cpp  IconParser.hpp  ItemTypeParser.cpp  ItemTypeParser.hpp  RecipeParser.cpp  RecipeParser.hpp  StoryGoalParser.cpp  StoryGoalParser.hpp  StoryGoalRuleParser.cpp  StoryGoalRuleParser.hpp
SN2CustomCraft/src/registering/: BuilderActionFactory.cpp  BuilderActionFactory.hpp  CategoryFactory.cpp  CategoryFactory.hpp  DatabankEntryFactory.cpp  DatabankEntryFactory.hpp  Hooks.cpp  Hooks.hpp  ItemTypeFactory.cpp  ItemTypeFactory.hpp  RecipeFactory.cpp  RecipeFactory.hpp  StoryGoalFactory.cpp  StoryGoalFactory.hpp  StoryGoalRuleFactory.hpp
SN2CustomCraft/src/util/: BufferBuilder.hpp  Finders.cpp  Finders.hpp  IconBuilder.cpp  IconBuilder.hpp  Log.cpp  Log.hpp  RegistryHelper.cpp  RegistryHelper.hpp
examples/: biomods.toml  builder.toml  categories.toml  databank.toml  recipes.toml
include/: README.md
include/SDF/: SDF.hpp  SDFCategory.hpp  SDFRecipe.hpp  Version.hpp
libs/: CMakeLists.txt
src/: Mod.cpp
src/api/: sdf.lua
src/api/cpp/: SDF.cpp  SDF.hpp  SDFCategory.cpp  SDFCategory.hpp  SDFRecipe.cpp  SDFRecipe.hpp
src/api/lua/: LuaStatics.cpp  LuaStatics.hpp  SDF.cpp  SDF.hpp  SDFRecipe.cpp  SDFRecipe.hpp
src/api/types/: recipe.lua  sdf.lua
src/parsing/: BuilderActionParser.cpp  BuilderActionParser.hpp  CategoryParser.cpp  CategoryParser.hpp  DatabankEntryParser.cpp  DatabankEntryParser.hpp  FileTraversal.cpp  FileTraversal.hpp  IconParser.cpp  ItemTypeParser.cpp  ItemTypeParser.hpp  RecipeParser.cpp  RecipeParser.hpp  StoryGoalParser.cpp  StoryGoalParser.hpp
src/parsing/generic/: IconParser.cpp  IconParser.hpp  StoryGoalRuleParser.cpp  StoryGoalRuleParser.hpp
src/registering/: BioModFactory.cpp  BioModFactory.hpp  BuilderActionFactory.cpp  BuilderActionFactory.hpp  CategoryFactory.cpp  CategoryFactory.hpp  DatabankEntryFactory.cpp  DatabankEntryFactory.hpp  Hooks.cpp  ItemTypeFactory.cpp  ItemTypeFactory.hpp  RecipeFactory.cpp  RecipeFactory.hpp  StoryGoalRuleFactory.cpp  StoryGoalRuleFactory.hpp
src/sdk/: CommonSDK.hpp  Fixed.hpp  TempFinders.cpp  TempFinders.hpp  Types.hpp
src/util/: Finders.cpp  Finders.hpp  Hooks.cpp  Hooks.hpp  IconBuilder.cpp  IconBuilder.hpp  RegistryHelper.cpp  RegistryHelper.hpp
